--- a/package.json
+++ b/package.json
@@ -6,18 +6,22 @@
   "scripts": {
     "build": "remix build",
     "dev": "remix dev --manual",
+    "setup": "prisma generate && prisma migrate deploy && prisma db seed",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "remix-serve ./build/index.js",
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@prisma/client": "^5.8.1",
     "@remix-run/css-bundle": "^2.5.0",
     "@remix-run/node": "^2.5.0",
     "@remix-run/react": "^2.5.0",
     "@remix-run/serve": "^2.5.0",
     "isbot": "^4.1.0",
+    "prisma": "^5.8.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tiny-invariant": "^1.3.1"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.5.0",
